--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title> class </title>
 </head>
 <body>
-The content of the document......
-<p>
-    This is version 0.1
-</p>
+<h1>The content of the document...... </h1>
+<h2> version 0.2 </h2>
 </body>
 </html>
+'
