--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <a href="http://thecatapi.com"><img src="http://thecatapi.com/api/images/get?format=src&type=gif"></a>
   <a href="http://thecatapi.com"><img src="http://thecatapi.com/api/images/get?format=src&type=gif"></a>
   <a href="http://thecatapi.com"><img src="http://thecatapi.com/api/images/get?format=src&type=gif"></a>
+  <body background="w3s.png" src="http://thecatapi.com/api/images/get?format=src&type=gif">
 
+    
 </body>
 </html>
